src/App.css
/* ... */
.navTextWrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 12px;
  background-color: #e3e3e3;
  color: black;
  transition: background .5s ease;
  border: 1px solid black;
  border-right: none;
  text-decoration: none;
}

.navTextWrapper:hover {
  background-color: #333333;
  color: white;
}

#navTitleWrapper {
  /*background-color: #ff4747;*/
}

#navTitleWrapper:hover {
  background-color: #333333;
  color: white;
}

.navText {
  font-size: 28px;
  line-height: 28px;
  text-decoration: none;
  justify-self: center;
  color: inherit;
  text-decoration: none;
  margin: 0px;
}

.navText:hover {

}

/*#navRight {
  grid-column: 4;
  grid-row: 1;
}

#navLeft {
  grid-column: 2;
  grid-row: 1;
}*/

#aboutLink {
  grid-column: 1;
  grid-row: 1;
}

#donateLink {
  grid-column: 2;
  grid-row: 1;
}

#volunteer {
  grid-column: 4;
  grid-row: 1;
}

#contactLink {
  grid-column: 5;
  grid-row: 1;
}

/*homepage stuff*/

#homepageWrapper {
  min-height: 100%;
}

#homepageContent {
  display: grid;
  grid-template-columns: 1fr 2fr;
}

#homepageImg {
  width: 100%;
  grid-column: 1;
}

#homepageText {
  grid-column: 2;
  background-color: #fafafa;
  color: #333333;
}

#eventOfTheDayWrapper {
  grid-column: 1 / 3;
  display: flex;
  flex-direction: column;
  justify-content: center;
  border-top: 1px solid #d1d1d1;
  background-color: #f5f5f5;
}

#eventOTDTextWrapper {
  margin-top: 15px;
  margin-bottom: 15px;
  text-align: center;
}

#eventOfTheDay {
  display: inline-block;
  padding: 3px;
  color: #333333;
  font-size: 36px;
  margin: 0px;
}

#homepageTextWrapper {
  position: absolute;
  top: 115px;
  right: 80px;
}

#homepageHeader {
  text-align: center;
  font-size: 42px;
  font-weight: bold;
  margin-top: 10px;
  margin-bottom: 15px;
}

#homepageDescription {
  font-size: 22px;
  margin-top: 15px;
  margin-bottom: 20px;
  margin-left: 25px;
  margin-right: 15px;
}

#toTheCalendarOuterWrapper {
  color: #333333;
  border: 1px solid #8e8e8e;
  padding: 18px;
  padding-top: 12px;
  padding-bottom: 12px;
  font-size: 28px;
  display: table;
  border-radius: 10px;
  margin: auto;
  margin-bottom: 10px;
  transition: .5s ease;
  text-decoration: none;
}

#toTheCalendarWrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
}

#toTheCalendarOuterWrapper:hover {
  color: #ededed;
  background-color: #333333;
}

#toTheCalendar {
  margin-top: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
}

@media (max-width: 1330px) {
  #homepageHeader {
    font-size: 36px;
    margin-bottom: 10px;
  }
  #homepageDescription {
    font-size: 20px;
    margin-top: 10px;
    margin-bottom: 10px;
  }
}

@media (max-width: 1140px) {
  #homepageHeader {
    font-size: 30px;
    margin-bottom: 5px;
  }
  #homepageDescription {
    font-size: 18px;
    margin-bottom: 5px;
  }
  #toTheCalendarOuterWrapper {
    font-size: 24px;
  }
}

@media (max-width: 1040px) {
  #homepageHeader {
    font-size: 24px;
  }
  #homepageDescription {
    font-size: 16px;
  }
  #toTheCalendarOuterWrapper {
    margin-top: 10px;
    font-size: 20px;
  }
}

@media (max-width: 950px) {
  #homepageHeader {
    font-size: 20px;
  }
  #homepageDescription {
    font-size: 15px;
  }
  #toTheCalendarOuterWrapper {
    font-size: 18px;
  }
}

@media (max-width: 850px) {
  #fullNavBarContainer {
    /*flex-direction: column;*/
  }
  .faNavIconContainer {
    border-radius: 100px;
    height: 35px;
    width: 35px;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .faNavIcon {
    font-size: 22px;
  }
  #homepageHeader {
    margin-top: 5px;
    margin-bottom: 5px;
  }
  #homepageDescription {
    margin-top: 5px;
    margin-bottom: 5px;
  }
  #toTheCalendarOuterWrapper {
    margin-top: 6px;
    padding: 8px;
  }
}

@media (max-width: 800px) {
  .fullNavTextContainer {
    width: 65px;
    font-size: 18px;
  }
  #titleContainer {
    width: 47px;
    font-size: 24px;
  }

}

@media (max-width: 780px) {
  #homepageContent {
    display: grid;
    grid-template-columns: 1fr;
    padding-top: 0px;
  }

  #homepageImg {
    display: none;
  }

  #homepageImgSmall {
    width: 32%;
    margin: auto;
  }

  #homepageText {
    padding-top: 5px;
    grid-column: 1;
  }

  #homepageDescription {
    margin-bottom: 8px;
    font-size: 17px;
  }

  #socialWrapper {
    display: flex;
    flex-direction: row;
  }
  #titleContainer {
    height: 48px;
    width: 35px;
    font-size: 20px;
  }
}

@media (max-width: 515px) {
  #homepageWrapper {
    padding-bottom: 15px;
    background-color: #f5f5f5;
  }
}

/*calendar stuff*/

#settings {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin-top: 0px;
  margin-bottom: 25px;
}

#datePicker {
  font-size: 17px;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  font-weight: bold;
  height: 52px;
  border-color: black;
  border-width: 1px;
  border-radius: 5px;
  box-shadow: 2px 2px 5px;
  margin-right: 10px;
  padding-top: 1px;
  padding-bottom: 1px;
  padding-left: 5px;
  padding-right: 5px;
}

#datePickerWrapper:hover {
  cursor: pointer;
}

#onThisDayWrapper {
  display: flex;
  justify-content: center;
}

#onThisDay {
  font-size: 32px;
  text-align: center;
  border-bottom: 1px solid black;
  display: inline-block;
  padding: 5px;
  padding-left: 12px;
  padding-right: 12px;
  margin-bottom: 20px;
  margin-top: 15px;
}

#searchWrapper {
  border: 1px solid black;
  border-radius: 5px;
  box-shadow: 2px 2px 5px;
  margin-left: 10px;
  padding: 1px;
}

#searchField {
  font-size: 17px;
  font-weight: bold;
  width: 175px;
  height: 52px;
  padding: 0px;
  padding-left: 12px;
  border: 0px;
}

#searchButton {
  width: 52px;
  height: 52px;
  background-color: white;
  color: grey;
  border: 0px;
}

#searchButton:hover {
  cursor: pointer;
}
/* ... */

